# rag-pdf-highlighter

./: .gitignore  Dockerfile  LICENSE.txt  README.md  main.py  plan.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-push-ecr.yml
src/: main.py
src/rag_pdf_highlighter/: __init__.py  exceptions.py  main.py
src/rag_pdf_highlighter/utils/: __init__.py  pdf_helpers.py
src/utils/: pdf_helpers.py
test/: conftest.py  test_main.py  test_pdf_helpers.py
utils/: pdf_helpers.py
